Add support for importing indexed enum type default values from mysql files

BUG:400803
FIXED-IN:2.26.80 (KDE Applications 18.11.80)